--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
 <html>
-  <head>
-    <title>Personal Matrial</title>
-  </head>
-  <body>
-    <h1>Personal usages</h1>
-  </body>
+<head>
+	<title>Personal Mutrial</title>
+<style>
+body{
+	width: 70%;
+	margin: auto;
+	border: 2px solid black;
+}
+</style>
+</head>
+<body>
+<h1 style="text-align:center;">Advance Java Programming</h1>
+<p style="text-align:center;"><u>(That no one uses)</u><p>
+<table style="width:100%; border:2px solid black; text-align: center;">
+	<tr>
+	<th>Application</th>
+	<th>Applet</th>
+	</tr>
+	<tr>
+		<td>It contain main() method.</td>
+		<td>It does not contain main() method.</td>
+	</tr>
+	<tr>
+		<td>Doesn't required Internet Connection</td>
+		<td>Required Internet Connection</td>
+	</tr>
+	<tr>
+		<td>Standalone application</td>
+		<td>Required Web page</td>
+	</tr>
+	<tr>
+		<td>Runs without browser</td>
+		<td>Required JAVA compartable browser</td>
+	</tr>
+	<tr>
+		<td>Entry point main() method</td>
+		<td>Entry point init() method</td>
+	</tr>
+</table>
+
+<h2>Applet:</h2>
+<p>Applet is a spacial type of program that is embbed in the web-page to generate the dynamic content.</p>
+<p>It runs on browser and work as client side.</P>
+<p>No main() method / always start from init() Method.</p>
+<p>Secqured</P>
+<p>It can be executed by browser running under many platforms including linux, macos, windows, bsds etc.</p>
+<p>It works as client side so less respoonse time.</p>
+<p>Plugin is required at client browser to execute applet (Drawback).</p>
+
+<h2>LifeCycle of applet:</h2>
+
+
+
+
+
+
+</table>
+</body>
 </html>
