--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ body{
 <p>Plugin is required at client browser to execute applet (Drawback).</p>
 
 <h2>LifeCycle of applet:</h2>
+<p> under cunstruction more metrial comming soon</P>
 
 
 
