--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body{
 </style>
 </head>
 <body>
+	<a href="bmfwebsite.html">In case if you find this to ugly</a>
 <h1 style="text-align:center;">Advance Java Programming</h1>
 <p style="text-align:center;"><u>(That no one uses)</u><p>
 <table style="width:100%; border:2px solid black; text-align: center;">
