--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ body{
 </style>
 </head>
 <body>
-	<a href="bmfwebsite.html">In case if you find this to ugly</a>
 <h1 style="text-align:center;">Advance Java Programming</h1>
 <p style="text-align:center;"><u>(That no one uses)</u><p>
+<a href="bmfwebsite.html" stle="text-align:center;">In case if you find this to ugly</a>
 <table style="width:100%; border:2px solid black; text-align: center;">
 	<tr>
 	<th>Application</th>
