--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body{
 <body>
 <h1 style="text-align:center;">Advance Java Programming</h1>
 <p style="text-align:center;"><u>(That no one uses)</u><p>
-<a href="bmfwebsite.html" style="text-align:center;">In case if you find this to ugly</a>
+<a href="bmfwebsite.html" style="text-align:center; display: block;">In case if you find this to ugly</a>
 <table style="width:100%; border:2px solid black; text-align: center;">
 	<tr>
 	<th>Application</th>
